hphp/hack/test/typecheck/class_meth_dollarsign.php
<?hh

class Foo {}

<<__EntryPoint>>
function test(): void {
  $y = meth_caller(Foo::class, 'bar$');
}
